# gitx

./: .gitignore  README.md  gen_arch.py
.github/workflows/: build.yml  homebrew.yml  lint.yml  release.yml
backend/: .env.example  go.mod  go.sum
backend/cmd/: main.go
backend/internal/ai/: agent.go  ai.go  tools.go
backend/internal/git/: git.go
backend/internal/intent/: intent.go
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: index.ts
frontend/src/components/: AIPanel.vue  CommitList.vue  DiffViewer.vue  FileHistoryList.vue  MainContent.vue  Sidebar.vue
frontend/src/types/: index.ts
frontend/src/utils/: date.ts
homebrew-tap/: README.md
homebrew-tap/Formula/: gitx.rb
site/: index.html  style.css
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  git.rs  intent.rs  lib.rs  main.rs  tools.rs
