[package]
name = "gitx"
version = "0.1.0"
description = "GitX - AI Git Diff Analyzer"
authors = ["GitX"]
edition = "2021"

[lib]
name = "gitx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
